nothing much, didn't had the time to do anything...

--- a/rayyyyyyyy/rayyyyyyyy.vcxproj
+++ b/rayyyyyyyy/rayyyyyyyy.vcxproj
@@ -133,6 +133,7 @@
     <Image Include="assets\background.jpg" />
     <Image Include="assets\fallout.png" />
     <Image Include="assets\icon.png" />
+    <Image Include="assets\knight.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
