--- a/rayyyyyyyy/rayyyyyyyy.vcxproj
+++ b/rayyyyyyyy/rayyyyyyyy.vcxproj
@@ -137,6 +137,9 @@
     <Image Include="assets\knight.png" />
     <Image Include="assets\terrain.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Media Include="assets\background.mp3" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
