--- a/rayyyyyyyy/rayyyyyyyy.vcxproj.filters
+++ b/rayyyyyyyy/rayyyyyyyy.vcxproj.filters
@@ -42,4 +42,9 @@
       <Filter>assets</Filter>
     </Image>
   </ItemGroup>
+  <ItemGroup>
+    <Media Include="assets\background.mp3">
+      <Filter>assets</Filter>
+    </Media>
+  </ItemGroup>
 </Project>
