--- a/rayyyyyyyy/rayyyyyyyy.vcxproj
+++ b/rayyyyyyyy/rayyyyyyyy.vcxproj
@@ -131,18 +131,18 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="assets\background.jpg" />
-    <Image Include="assets\craftpixUndead\PNG\Objects_separately\Bones_shadow2_11.png" />
-    <Image Include="assets\fallout.png" />
     <Image Include="assets\icon.png" />
     <Image Include="assets\knight.png" />
-    <Image Include="assets\menu.png" />
-    <Image Include="assets\terrain.png" />
+    <Image Include="assets\menu.jpg" />
   </ItemGroup>
   <ItemGroup>
-    <Media Include="assets\background.mp3" />
-    <Media Include="assets\ambientBG.mp3" />
-    <Media Include="assets\death_screen.mp3" />
+    <Media Include="assets\death.mp3" />
+    <Media Include="assets\Dragonsreach.mp3" />
+    <Media Include="assets\Into Darkness.mp3" />
     <Media Include="assets\menu.mp3" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="json.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
