--- a/rayyyyyyyy/rayyyyyyyy.vcxproj.filters
+++ b/rayyyyyyyy/rayyyyyyyy.vcxproj.filters
@@ -29,34 +29,30 @@
     <Image Include="assets\background.jpg">
       <Filter>assets</Filter>
     </Image>
-    <Image Include="assets\fallout.png">
-      <Filter>assets</Filter>
-    </Image>
     <Image Include="assets\knight.png">
       <Filter>assets</Filter>
     </Image>
-    <Image Include="assets\terrain.png">
-      <Filter>assets</Filter>
-    </Image>
-    <Image Include="assets\craftpixUndead\PNG\Objects_separately\Bones_shadow2_11.png">
-      <Filter>assets</Filter>
-    </Image>
-    <Image Include="assets\menu.png">
+    <Image Include="assets\menu.jpg">
       <Filter>assets</Filter>
     </Image>
   </ItemGroup>
   <ItemGroup>
-    <Media Include="assets\background.mp3">
-      <Filter>assets</Filter>
-    </Media>
-    <Media Include="assets\ambientBG.mp3">
-      <Filter>assets</Filter>
-    </Media>
     <Media Include="assets\menu.mp3">
       <Filter>assets</Filter>
     </Media>
-    <Media Include="assets\death_screen.mp3">
+    <Media Include="assets\Into Darkness.mp3">
       <Filter>assets</Filter>
     </Media>
+    <Media Include="assets\death.mp3">
+      <Filter>assets</Filter>
+    </Media>
+    <Media Include="assets\Dragonsreach.mp3">
+      <Filter>assets</Filter>
+    </Media>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="json.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
