--- a/rayyyyyyyy/rayyyyyyyy.vcxproj
+++ b/rayyyyyyyy/rayyyyyyyy.vcxproj
@@ -129,6 +129,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Enemy.cpp" />
+    <ClCompile Include="Npc.cpp" />
+    <ClCompile Include="Player.cpp" />
     <ClCompile Include="raylib-tileson.cpp" />
     <ClCompile Include="rayyyyyyyy.cpp" />
   </ItemGroup>
@@ -146,7 +149,11 @@
     <Media Include="assets\menu.mp3" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Enemy.h" />
+    <ClInclude Include="gameState.h" />
     <ClInclude Include="json.hpp" />
+    <ClInclude Include="Npc.h" />
+    <ClInclude Include="Player.h" />
     <ClInclude Include="raylib-tileson.h" />
     <ClInclude Include="tileson.hpp" />
   </ItemGroup>
